cargo-features = ["edition2021"]
[package]
name = "example-bot"
version = "0.1.0"
authors = ["MTRNord <mtrnord1@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.matrix-sdk]
version = "0.3"

[dependencies]
mrsbfh = {path = "../mrsbfh"}
serde = "1.0"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2.4"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros"] }
clap = "=3.0.0-beta.2"
clap_derive = "=3.0.0-beta.2"
async-trait = "0.1.41"
thiserror = "1.0"
regex = "1.4.3"
