[package]
name = "example-bot"
version = "0.2.0"
authors = ["MTRNord <mtrnord1@gmail.com>"]
edition = "2021"
license = "AGPL-3.0-or-later"
publish = false
repository = "https://github.com/MTRNord/mrsbfh"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.matrix-sdk]
version = "0.4.1"

[dependencies]
mrsbfh = {version = "0.2.0", path = "../mrsbfh"}
serde = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3.1"
tracing-futures = "0.2.4"
tokio = { version = "1", features = ["full"] }
clap = "=3.0.0-beta.2"
clap_derive = "=3.0.0-beta.2"
async-trait = "0.1.41"
thiserror = "1.0"
regex = "1.4.3"
