[package]
name = "example-bot"
version = "0.2.0"
authors = ["MTRNord <mtrnord1@gmail.com>"]
edition = "2021"
license = "AGPL-3.0-or-later"
publish = false
repository = "https://github.com/MTRNord/mrsbfh"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.matrix-sdk]
version = "0.5.0"

# To create a bot that uses the Rust implementation of TLS use the default features minus native-tls
# Ex:
# [dependencies.matrix-sdk]
# version = "0.4.1"
# default_features = false
# features = ["encryption", "sled_cryptostore", "sled_state_store", "require_auth_for_profile_requests", "rustls-tls"]

[dependencies]
mrsbfh = {version = "0.4.0", path = "../mrsbfh"}
serde = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3.9"
tracing-futures = "0.2.5"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros"] }
clap = { version = "3.1.1", features = ["derive"] }
async-trait = "0.1.52"
thiserror = "1.0"
regex = "1.5.4"
