[package]
name = "mrsbfh-macros"
version = "0.3.0"
authors = ["MTRNord <mtrnord1@gmail.com>"]
edition = "2021"
description = "Maros for the mrsbfh crate"
license = "AGPL-3.0-or-later"
repository = "https://github.com/MTRNord/mrsbfh"
keywords = ["matrix", "chat", "framework", "macros", "communication"]
categories = ["network-programming", "parsing"]

[lib]
proc-macro = true

[dependencies]
syn = { version= "1.0", features = ["full"] }
quote = "1.0"
convert_case = "0.5.0"
proc-macro2 = "1.0"
