cargo-features = ["edition2021"]
[package]
name = "mrsbfh"
version = "0.1.0"
authors = ["MTRNord <mtrnord1@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.matrix-sdk]
version = "0.2"

[dependencies]
url = "2.2.1"

thiserror = "1.0"

# Command macros
mrsbfh-macros = {path = "../mrsbfh-macros", optional = true}

tokio = { version = "0.2", features = ["full"] }
tracing = "0.1"

serde = "1.0"
serde_yaml = "0.8"
serde_json = "1"

pulldown-cmark = "0.8.0" # For generating the help text

regex = "1.4"
async-trait = "0.1"

[features]
default = ["macros"]
macros = ["mrsbfh-macros"]
