cargo-features = ["edition2021"]
[package]
name = "mrsbfh"
version = "0.1.0"
authors = ["MTRNord <mtrnord1@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
features = ["docs"]
rustdoc-args = ["--cfg", "feature=\"docs\""]

[dependencies.matrix-sdk]
version = "0.3"
# No defaults so that end user can add compiletime flags
default-features = false

[dependencies]
url = "2.2.1"

thiserror = "1.0"

# Command macros
mrsbfh-macros = {path = "../mrsbfh-macros", optional = true}

tokio = { version = "1", features =["rt", "rt-multi-thread", "macros"]}
tracing = "0.1"

serde = "1.0"
serde_yaml = "0.8"
serde_json = "1"

pulldown-cmark = "0.8.0" # For generating the help text

regex = "1.4"
async-trait = "0.1"
lazy_static = "1"

[features]
default = ["macros"]
macros = ["mrsbfh-macros"]
docs = ["macros", "matrix-sdk/encryption", "matrix-sdk/sled_cryptostore", "matrix-sdk/sled_state_store", "matrix-sdk/require_auth_for_profile_requests", "matrix-sdk/native-tls"]
