[package]
name = "mrsbfh"
version = "0.4.0"
authors = ["MTRNord <mtrnord1@gmail.com>"]
edition = "2021"
description = "A toolkit for writing commandbots more efficient in rust for matrix."
license = "AGPL-3.0-or-later"
repository = "https://github.com/MTRNord/mrsbfh"
keywords = ["matrix", "chat", "framework", "simple", "communication"]
categories = ["network-programming"]
readme = "../README.md"

[dependencies.matrix-sdk]
version = "0.4.1"
default_features = false

[dependencies]
url = "2.2.2"

thiserror = "1.0"

# Command macros
mrsbfh-macros = {version = "0.4.0", path = "../mrsbfh-macros", optional = true}

tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1"

serde = "1.0"
serde_yaml = "0.8"
serde_json = "1"

pulldown-cmark = {version = "0.9.1", optional = true} # For generating the help text

regex = "1.5"
async-trait = "0.1"
lazy_static = "1"

[features]
default = ["macros", "native-tls"]
macros = ["mrsbfh-macros", "pulldown-cmark"]
rustls = ["matrix-sdk/rustls-tls"]
native-tls = ["matrix-sdk/native-tls"]
